# hardware-splicer

./: .env.example  .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION.md  AR_WEBXR_STATUS.md  BEYOND_CHATGPT_VISION.md  BUSINESS_EXECUTION_PLAN.md  CAPABILITY_VS_VISION_REPORT.md  CHANGELOG.md  CIRCUIT_AI_DIY_LAUNCH_READY.md  CIRCUIT_AI_FINAL_STATUS.md  CIRCUIT_AI_VALUE_ASSESSMENT.md  COUNCIL_LAST_DECISION.md  DEMO_READY_SUMMARY.txt  DEPLOYMENT_COMPLETE.txt  DEPLOYMENT_GUIDE.md  DEPLOYMENT_QUICKSTART.md  DEPLOYMENT_SUMMARY.json  DIAGNOSIS_SYSTEM_STATUS.md  DIY_ELECTRONICS_PIVOT_STRATEGY.md  Dockerfile.api  Dockerfile.ee  EDGE_CASE_TEST_REPORT.md  EXPANSION_SUMMARY.md  FINAL_100_PERCENT_STATUS.md  FINAL_STATUS.md  FIXES_COMPLETED.md  GLOBAL_PAYMENT_SETUP.md  GNUmakefile  GRANT_PROPOSAL_TEMPLATE.md  HANDOFF.md  HANDOFF_TO_CHATGPT.md  HONEST_ASSESSMENT.md  INSTITUTIONAL_DEMO_READY.md  INTEGRATION_VERIFICATION.txt  INTELLIGENT_COMPONENT_SELECTION.md  INTERFACE_UPGRADE_DOCUMENTATION.md  IRON_MAN_INTEGRATION_PLAN.md  LAUNCH_CHECKLIST.md  LAUNCH_READY.md  (+89 more)
apps/circuit-ai/: .dockerignore  .env.example  .gitignore  API_DOCUMENTATION.md  DEPLOYMENT_QUICKSTART.md  Dockerfile  V2_API_GUIDE.md  docker-compose.api.yml  eval_summary.json  process_scraped_tutorials.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-foundation.txt  requirements.runtime.txt  run_workflow_test.sh  setup.cfg  start_with_payments.sh
apps/circuit-ai/.claude/: settings.local.json
apps/circuit-ai/.github/workflows/: ci.yml
apps/circuit-ai/.playwright-mcp/: page-2026-05-05T11-58-07-535Z.yml  page-2026-05-05T12-40-29-947Z.yml
apps/circuit-ai/archive/frontend/: package.json
apps/circuit-ai/archive/monitoring/: prometheus.yml
apps/circuit-ai/circuit-ai-frontend/: next.config.ts  package.json
apps/circuit-ai/circuit-ai-frontend/app/: page.tsx
apps/circuit-ai/circuit-ai-frontend/components/: backend-health-card.tsx  page-intro.tsx  safety-banner.tsx  site-footer.tsx  site-header.tsx  studio-command-bar.tsx  studio-runtime.tsx  workbench-canvas.tsx
apps/circuit-ai/circuit-ai-frontend/lib/: cad-demo.ts  cad-project.ts  chat-tokens.ts  jarvis.ts  kicad-serializer.ts  workbench-store.ts
apps/circuit-ai/circuit-ai-frontend/scripts/: debug-drc-one.cjs  phrases-eval.json  test-build-intent.cjs  test-compose-scenarios.cjs  test-firmware-bundle.cjs  test-firmware-scaffold.cjs  test-golden-path.cjs  test-inventory-topology.cjs  test-local-manufacture.cjs  test-phrase-eval.cjs  test-phrase-expander.cjs  validate-module-library.cjs
apps/circuit-ai/circuit-ai-frontend/types/: analysis.ts
apps/circuit-ai/circuit-ai-mcp/: README.md  package.json
apps/circuit-ai/circuit-ai-sdk-js/: README.md
apps/circuit-ai/circuit-ai-sdk-js/src/: index.ts
apps/circuit-ai/circuit-ai-sdk-python/: setup.py
apps/circuit-ai/circuit-ai-sdk-python/circuitai/: client.py  version.py
apps/circuit-ai/data/board_sessions/: sessions.json
apps/circuit-ai/data/bom/: bom_mappings.json
apps/circuit-ai/data/content/: components.yaml  projects.yaml
apps/circuit-ai/data/datasheets/: metadata.json
apps/circuit-ai/data/extracted_pinouts/: BMP280_pinout.json  FT232RL_pinout.json  TL072_pinout.json  ULN2003_pinout.json  W25Q128_pinout.json  WS2812B_pinout.json
apps/circuit-ai/data/idea_economics/: overrides.example.json
apps/circuit-ai/data/mechanical/: catalog.jsonl
apps/circuit-ai/deploy/: Makefile  render.yaml  vercel.json
apps/circuit-ai/deploy/docker/: .dockerignore  Dockerfile  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.yml
apps/circuit-ai/deploy/heroku/: app.json
apps/circuit-ai/deploy/monitoring/: prometheus.yml
apps/circuit-ai/docs/: API_FIRST_DOCUMENTATION.md  ARCHITECTURE.md  CERTAINTY_LEDGER.md  CIRCUIT_AI_MASTER_BLUEPRINT.md  COPILOT_INTEGRATION.md  DEEPSEEK_INTEGRATION.md  FOUNDATION_BACKENDS.md  FRONTEND_GUIDE.md  HANDOFF_CIRCUIT_AI_HARDWARE_SPLICER_2026-05-24.md  NICHE_SUBSCRIPTION_POSITIONING.md  QUALITY_AND_SAFETY_NOTES.md  QUICK_START.md  QWEN_NATIVE_VISION_TRIAL.md  README.md  SUBSCRIPTION_RELIABILITY_GATES.md
apps/circuit-ai/docs/archive/: DEPLOYMENT_READY.md  ELECTROCOM61_SETUP_GUIDE.md  (+1 more)
apps/circuit-ai/eval/: deeppcb_golden_eval.json  deeppcb_golden_eval_latest.json  deeppcb_golden_eval_rerun.json  deeppcb_golden_eval_t16.json  deeppcb_golden_eval_t32.json  deeppcb_golden_eval_t48.json  golden_defect_eval_rerun.json  qwen_readiness_baseline.json  salvage_workflow_report_v3.json  test_pcb_board_understanding.json  test_pcb_ocr_board_understanding.json
apps/circuit-ai/frontend/: index.html
apps/circuit-ai/mcp_server/: package-lock.json  package.json
apps/circuit-ai/rust_physics/: Cargo.toml
apps/circuit-ai/scripts/: analyze_board_understanding.py  auto_configure.py  benchmark_pcb_models.py  build_knowledge_base.py  component_forensics.py  copilot_circuit_reasoning_smoke.py  deepseek_circuit_reasoning_smoke.py  deepseek_verify_qwen_trial.py  demo.py  demo_bundle.py  demo_generative_build.py  demo_llm_vs_keywords.py  deploy_mvp.py  download_electrocom61_real.py  download_now.py  dum_e_workflow.py  evaluate.py  evaluate_arbitrary_board_workflow.py  evaluate_bench_topology_capture.py  evaluate_deeppcb_golden.py  evaluate_diy_project_intake.py  evaluate_hardware_plan_real_sources.py  evaluate_internet_reference_corpus.py  evaluate_production_authority_regression.py  evaluate_qwen_multiview_pipeline.py  evaluate_qwen_pipeline_assessment.py  evaluate_real_board_corpus.py  evaluate_salvage_splice_coverage.py  fetch_deeppcb_subset.py  fetch_pcb_component_model.py  generate_demo_data.py  generate_repair_guide.py  generate_video_repair_playbook.py  idea_economics.py  ingest_module_library.py  intake_real_board_case.py  machine_engineering_demo.py  populate_component_db.py  process_datasheets_auto.py  qwen_vision_trial.py  (+14 more)
apps/circuit-ai/src/: __init__.py  cli.py
apps/circuit-ai/static/: index.html
apps/circuit-ai/templates/: holographic_demo.html  index.html
apps/circuit-ai/tests/: conftest.py
(+2400 files in other folders)
