[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "circuit-ai"
version = "0.1.0"
description = "Circuit-AI: Vision + spectral intelligence for PCB analysis"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Circuit-AI Team"}]
dependencies = [
    "flask",
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "loguru",
    "opencv-python",
    "Pillow",
    "numpy",
    "torch",
    "ultralytics",
    "pytesseract",
    "networkx",
    "scipy",
    "stripe",
]

[project.scripts]
circuit-ai-cli = "src.cli:main"
circuit-ai-api = "src.api.server:main"
circuit-ai-fastapi = "src.api.v1.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
