[metadata]
name = circuit-ai
version = 0.1.0
description = Circuit-AI: Vision + spectral intelligence for PCB analysis
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Circuit-AI Team

[options]
python_requires = >=3.9
packages = find:
install_requires =
    fastapi
    uvicorn
    pydantic
    loguru
    opencv-python
    Pillow
    numpy
    torch
    ultralytics
    pytesseract
    networkx
    scipy

[options.entry_points]
console_scripts =
    circuit-ai-cli = src.cli:main
    circuit-ai-api = src.api.v1.cli:main

[options.packages.find]
where = src
