[metadata]
name = circuit-ai
version = 0.4.0
description = Circuit-AI: Vision + spectral intelligence for PCB analysis, validation, and manufacturing
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Circuit-AI Team

[options]
python_requires = >=3.9
packages = find_namespace:
install_requires =
    flask
    fastapi
    uvicorn
    pydantic
    pydantic-settings
    python-dotenv
    loguru
    opencv-python
    Pillow
    numpy
    torch
    ultralytics
    pytesseract
    networkx
    scipy
    stripe

[options.entry_points]
console_scripts =
    circuit-ai-cli = src.cli:main
    circuit-ai-api = src.api.server:main
    circuit-ai-fastapi = src.api.v1.cli:main

[options.packages.find]
where = .
include =
    src*
